<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.nametagedit</groupId>
    <artifactId>nametagedit</artifactId>
    <version>4.6.0</version>
    <packaging>jar</packaging>
    <name>NametagEdit</name>
    <url>https://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spigot.version>1.20.6-R0.1-SNAPSHOT</spigot.version>
    </properties>
    <dependencies>
        <!--Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- LuckPerms -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
        <!-- Clip Placeholder API -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>
        <!-- HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
        </dependency>
        <!-- SL4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.32</version>
            <scope>compile</scope>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <!-- Google Guava API -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.0.0-jre</version>
        </dependency>
        <!-- bStats -->
        <dependency>
            <groupId>org.bstats.bStats-Metrics</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.3</version>
            <scope>compile</scope>
        </dependency>
        <!-- PermissionsEx -->
        <dependency>
            <groupId>ninja.leaping.permissionsex</groupId>
            <artifactId>permissionsex-parent</artifactId>
            <version>2.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/PermissionsEx.jar</systemPath>
        </dependency>
        <!-- zPermissions -->
        <dependency>
            <groupId>org.tyrannyofheaven.bukkit</groupId>
            <artifactId>zPermissions</artifactId>
            <version>1.3-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/zPermissions.jar</systemPath>
        </dependency>
        <!-- EssentialsGroupManager -->
        <dependency>
            <groupId>org.anjocaido.groupmanager</groupId>
            <artifactId>EssentialsGroupManager</artifactId>
            <version>2.x-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/EssentialsGroupManager.jar</systemPath>
        </dependency>
        <!-- Guilds -->
        <dependency>
            <groupId>me.glaremasters</groupId>
            <artifactId>guilds</artifactId>
            <version>3.5.6.6-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- LibsDisguises -->
        <dependency>
            <groupId>LibsDisguises</groupId>
            <artifactId>LibsDisguises</artifactId>
            <version>10.0.25</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/LibsDisguises-10.0.25.jar</systemPath>
        </dependency>
        <!-- Aikar -->
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <repositories>
        <!-- CodeMC -->
        <repository>
            <id>nms-repo</id>
            <url>https://repo.codemc.io/repository/nms/</url>
        </repository>
        <!-- Spigot -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- Clip Repo -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- bStats -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Aikar Repo -->
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <!-- Glare Repo -->
        <repository>
            <id>guilds</id>
            <url>https://repo.glaremasters.me/repository/public/</url>
        </repository>
    </repositories>
    <!-- Builds NametagEdit -->
    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>NametagEdit</finalName>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources/</directory>
                <includes>
                    <include>*.*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <!-- Filter values in resources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.shared</groupId>
                        <artifactId>maven-filtering</artifactId>
                        <version>1.3</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- Shade all Libs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <includes>
                                    <include>org.slf4j:*</include>
                                    <include>com.zaxxer:*</include>
                                    <include>org.bstats.bStats-Metrics:*</include>
                                    <include>co.aikar:*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Make a Jar -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
        </plugins>
    </build>
</project>